# Pourdown

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  markdown-import.md  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: index.html  index.md  markdown-import.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/guide/: markdown-syntax.md
docs/zh/: index.md
docs/zh/guide/: markdown-syntax.md
scripts/: fetch-pdfium.mjs  set-version.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/frameworks/pdfium.framework/: Info.plist
src-tauri/permissions/: app-permissions.toml
src-tauri/src/: fixture_gen.rs  main.rs
src-tauri/src/convert/: docx.rs  inline_fmt.rs  media.rs  mod.rs  pdf.rs  pptx.rs  xlsx.rs
src-tauri/tests/fixtures/: sample.docx  sample.pptx  sample.xlsx
src/components/CodeBlockRenderer/: CodeBlockRenderer.css
src/components/Editor/: Editor.tsx  (+6 more)
src/extensions/: definitionList.test.ts  definitionList.ts  emoji.test.ts  emoji.ts  math.test.ts  math.ts  rawHtml.test.ts  rawHtml.ts
src/hooks/: useEditorLayout.ts  usePlatformInitialization.ts
src/lib/: codeBlockUtils.ts  documentTitle.ts  editorAnchor.ts  frontmatterUtils.ts  katex.ts  layoutCalculations.ts  markdownExtensions.ts  utils.ts
src/stores/: documentStore.ts  editorStore.ts  uiStore.ts
src/theme/: utils.ts
src/types/: markdown-it-shorthand-plugins.d.ts
web/: index.html
(+11 files in other folders)
